--- a/style.css
+++ b/style.css
@@ -3,7 +3,38 @@
 /* reset code start here  */
 
 *{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  text-decoration: none;
+  list-style-type: none;
   font-family: "Nunito", sans-serif;
+  font-weight: 400;
 }
 
 /* reset code ends here  */
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: bisque;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card{
+  width: 32rem;
+  height: 20rem;
+  background-color: rgb(2, 160, 245);
+  border-radius: 0.6rem;
+  padding: 1rem;
+  color: white;
+  box-shadow: 0.1rem 0.1rem 0.1rem #222, -0.1rem 0 0.1rem #222;
+  font-size: 1.2rem;
+}
+
+.card:hover{
+  
+}
