--- a/style.css
+++ b/style.css
@@ -49,3 +49,14 @@
   margin-bottom: 1rem;
 }
 
+input {
+  border: none;
+  border: 0.1rem solid;
+  border-radius: 0.6rem;
+  padding: 0.2rem;
+  background-color: rgb(4, 117, 238);
+  color: white;
+  cursor: pointer;
+  font-size: 1.2rem;
+  width: 40%;
+}
