--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
   color: white;
   box-shadow: 0.1rem 0.1rem 0.1rem #222, -0.1rem 0 0.1rem #222;
   font-size: 1.2rem;
+  transition: all 0.3s;
 }
 
 .card:hover{
@@ -58,5 +59,26 @@ input {
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
-  width: 40%;
+  width: 42%;
+}
+
+.buttons{
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 1rem 1rem 0;
+}
+
+.btn {
+  border: none;
+  border: 0.1rem solid;
+  border-radius: 0.6rem;
+  padding: 0.2rem;
+  background-color: rgb(4, 117, 238);
+  cursor: pointer;
+  transition: all 0.3s;
+  font-size: 1.2rem;
+}
+
+.btn:hover {
+  background-color: azure;
 }
